--- a/brafe-1/brafe-1-puro/index.html
+++ b/brafe-1/brafe-1-puro/index.html
@@ -1,91 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.css" />
-    <title>Brafé 1</title>
-  </head>
-  <body>
-    <header>
-      <div>
-        <a href="#"><img src="img/brafe.png" alt="Brafé" /></a>
-      </div>
-      <nav>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="css/style.css" />
+  <title>Brafé 1</title>
+</head>
+
+<body>
+  <header class="menu">
+    <div class="menu-container">
+      <a class="menu-logo" href="#"><img src="img/brafe.png" alt="Brafé">
+      </a>
+
+      <nav class="menu-nav">
         <ul>
-          <li>
-            <a href="#">Sobre</a>
-            <a href="#">Produtos</a>
-            <a href="#">Portfólio</a>
-            <a href="#">Contato</a>
-          </li>
+
+          <li><a href="#">Sobre</a></li>
+          <li><a href="#">Produtos</a></li>
+          <li><a href="#">Portfólio</a></li>
+          <li><a href="#">Contato</a></li>
+
         </ul>
       </nav>
-    </header>
+    </div>
+  </header>
 
-    <main>
-      <h1>Cafés com a cara<br />do Brasil</h1>
-      <p>Direto das fazendas de Minas Gerais</p>
-    </main>
+  <main>
+    <h1>Cafés com a cara<br />do Brasil</h1>
+    <p>Direto das fazendas de Minas Gerais</p>
+  </main>
 
-    <section>
-      <h2>Uma Mistura de</h2>
+  <section>
+    <h2>Uma Mistura de</h2>
 
+    <div>
       <div>
-        <div>
-          <img src="img/cafe-1.jpg" alt="" />
-          <h3>amor</h3>
-        </div>
-        <div>
-          <img src="img/cafe-2.jpg" alt="" />
-          <h3>perfeição</h3>
-        </div>
+        <img src="img/cafe-1.jpg" alt="" />
+        <h3>amor</h3>
       </div>
-
-      <p>
-        O café é uma bebida produzida a partir dos grãos torrados do fruto do
-        cafeeiro. É servido tradicionalmente quente, mas também pode ser
-        consumido gelado. Ele é um estimulante, por possuir cafeína - geralmente
-        80 a 140mg para cada 207ml dependendo do método de preparação.
-      </p>
-    </section>
-
-    <section>
       <div>
-        <div>
-          <h2>Paulista</h2>
-          <p>
-            As condições climáticas não eram as melhores nessa primeira escolha
-            e, entre 1800 e 1850, tentou-se o cultivo noutras regiões: o João
-            Alberto Castelo Branco trouxe mudas do Pará
-          </p>
-        </div>
-        <div>
-          <h2>Carioca</h2>
-          <p>
-            As condições climáticas não eram as melhores nessa primeira escolha
-            e, entre 1800 e 1850, tentou-se o cultivo noutras regiões: o João
-            Alberto Castelo Branco trouxe mudas do Pará
-          </p>
-        </div>
-        <div>
-          <h2>Mineiro</h2>
-          <p>
-            As condições climáticas não eram as melhores nessa primeira escolha
-            e, entre 1800 e 1850, tentou-se o cultivo noutras regiões: o João
-            Alberto Castelo Branco trouxe mudas do Pará
-          </p>
-        </div>
+        <img src="img/cafe-2.jpg" alt="" />
+        <h3>perfeição</h3>
       </div>
-      <a href="#">Saiba Mais</a>
-    </section>
+    </div>
 
-    <section>
+    <p>
+      O café é uma bebida produzida a partir dos grãos torrados do fruto do
+      cafeeiro. É servido tradicionalmente quente, mas também pode ser
+      consumido gelado. Ele é um estimulante, por possuir cafeína - geralmente
+      80 a 140mg para cada 207ml dependendo do método de preparação.
+    </p>
+  </section>
+
+  <section>
+    <div>
       <div>
-        <img src="img/botafogo.jpg" alt="Brafé unidade Botafogo" />
+        <h2>Paulista</h2>
+        <p>
+          As condições climáticas não eram as melhores nessa primeira escolha
+          e, entre 1800 e 1850, tentou-se o cultivo noutras regiões: o João
+          Alberto Castelo Branco trouxe mudas do Pará
+        </p>
+      </div>
+      <div>
+        <h2>Carioca</h2>
+        <p>
+          As condições climáticas não eram as melhores nessa primeira escolha
+          e, entre 1800 e 1850, tentou-se o cultivo noutras regiões: o João
+          Alberto Castelo Branco trouxe mudas do Pará
+        </p>
+      </div>
+      <div>
+        <h2>Mineiro</h2>
+        <p>
+          As condições climáticas não eram as melhores nessa primeira escolha
+          e, entre 1800 e 1850, tentou-se o cultivo noutras regiões: o João
+          Alberto Castelo Branco trouxe mudas do Pará
+        </p>
+      </div>
+    </div>
+    <a href="#">Saiba Mais</a>
+  </section>
+
+  <section>
+    <div>
+      <img src="img/botafogo.jpg" alt="Brafé unidade Botafogo" />
+      <div>
+        <h2>Botafogo</h2>
+        <p>
+          As condições climáticas não eram as melhores nessa primeira escolha
+          e, entre 1800 e 1850, tentou-se o cultivo.
+        </p>
+        <a href="#">Ver Mapa</a>
+      </div>
+      <div>
+        <img src="img/iguatemi.jpg" alt="Brafé unidade Iguatemi" />
         <div>
-          <h2>Botafogo</h2>
+          <h2>Iguatemi</h2>
           <p>
             As condições climáticas não eram as melhores nessa primeira escolha
             e, entre 1800 e 1850, tentou-se o cultivo.
@@ -93,51 +107,42 @@
           <a href="#">Ver Mapa</a>
         </div>
         <div>
-          <img src="img/iguatemi.jpg" alt="Brafé unidade Iguatemi" />
+          <img src="img/mineirao.jpg" alt="Brafé unidade Minerão" />
           <div>
-            <h2>Iguatemi</h2>
+            <h2>Mineirão</h2>
             <p>
               As condições climáticas não eram as melhores nessa primeira escolha
               e, entre 1800 e 1850, tentou-se o cultivo.
             </p>
             <a href="#">Ver Mapa</a>
           </div>
-          <div>
-            <img src="img/mineirao.jpg" alt="Brafé unidade Minerão" />
-            <div>
-              <h2>Mineirão</h2>
-              <p>
-                As condições climáticas não eram as melhores nessa primeira escolha
-                e, entre 1800 e 1850, tentou-se o cultivo.
-              </p>
-              <a href="#">Ver Mapa</a>
-            </div>
 
-      </div>
-    </section>
-
-    <section>
-      <div>
-        <div>
-          <h2>Assine Nossa Newsletter</h2>
-          <p>promoções e eventos mensais</p>
         </div>
-        <form action="">
-          <label form="">E-mail</label>
-          <input type="text" placeholder="Digite seu e-mail">
-          <button type="submit">Enviar</button>
-        </form>
-      </div>
-    </section>
+  </section>
 
-    <footer>
+  <section>
+    <div>
       <div>
-        <p>
-          Este é um projeto da Origamid. Mais em origamid.com<br>
-          Praia de Botafogo, 300, 5 andar - Botafogo - Rio de Janeiro
-        </p>
-        <img src="img/brafe.png" alt="Brafé">
+        <h2>Assine Nossa Newsletter</h2>
+        <p>promoções e eventos mensais</p>
       </div>
-    </footer>
-  </body>
+      <form action="">
+        <label form="">E-mail</label>
+        <input type="text" placeholder="Digite seu e-mail">
+        <button type="submit">Enviar</button>
+      </form>
+    </div>
+  </section>
+
+  <footer>
+    <div>
+      <p>
+        Este é um projeto da Origamid. Mais em origamid.com<br>
+        Praia de Botafogo, 300, 5 andar - Botafogo - Rio de Janeiro
+      </p>
+      <img src="img/brafe.png" alt="Brafé">
+    </div>
+  </footer>
+</body>
+
 </html>
