--- a/brafe-1/brafe-1-puro/index.html
+++ b/brafe-1/brafe-1-puro/index.html
@@ -85,8 +85,8 @@
     <a class="produtos-btn" href="#">Saiba Mais</a>
   </section>
 
-  <section>
-    <div>
+  <section class="locais">
+    <div class="locais-item">
       <img src="img/botafogo.jpg" alt="Brafé unidade Botafogo" />
       <div>
         <h2>Botafogo</h2>
@@ -96,7 +96,8 @@
         </p>
         <a href="#">Ver Mapa</a>
       </div>
-      <div>
+      </div>
+      <div class="locais-item">
         <img src="img/iguatemi.jpg" alt="Brafé unidade Iguatemi" />
         <div>
           <h2>Iguatemi</h2>
@@ -106,7 +107,8 @@
           </p>
           <a href="#">Ver Mapa</a>
         </div>
-        <div>
+        </div>
+        <div class="locais-item">
           <img src="img/mineirao.jpg" alt="Brafé unidade Minerão" />
           <div>
             <h2>Mineirão</h2>
