--- a/brafe-1/brafe-1-puro/index.html
+++ b/brafe-1/brafe-1-puro/index.html
@@ -96,35 +96,35 @@
         </p>
         <a href="#">Ver Mapa</a>
       </div>
+    </div>
+    <div class="locais-item">
+      <img src="img/iguatemi.jpg" alt="Brafé unidade Iguatemi" />
+      <div>
+        <h2>Iguatemi</h2>
+        <p>
+          As condições climáticas não eram as melhores nessa primeira escolha
+          e, entre 1800 e 1850, tentou-se o cultivo.
+        </p>
+        <a href="#">Ver Mapa</a>
       </div>
-      <div class="locais-item">
-        <img src="img/iguatemi.jpg" alt="Brafé unidade Iguatemi" />
-        <div>
-          <h2>Iguatemi</h2>
-          <p>
-            As condições climáticas não eram as melhores nessa primeira escolha
-            e, entre 1800 e 1850, tentou-se o cultivo.
-          </p>
-          <a href="#">Ver Mapa</a>
-        </div>
-        </div>
-        <div class="locais-item">
-          <img src="img/mineirao.jpg" alt="Brafé unidade Minerão" />
-          <div>
-            <h2>Mineirão</h2>
-            <p>
-              As condições climáticas não eram as melhores nessa primeira escolha
-              e, entre 1800 e 1850, tentou-se o cultivo.
-            </p>
-            <a href="#">Ver Mapa</a>
-          </div>
+    </div>
+    <div class="locais-item">
+      <img src="img/mineirao.jpg" alt="Brafé unidade Minerão" />
+      <div>
+        <h2>Mineirão</h2>
+        <p>
+          As condições climáticas não eram as melhores nessa primeira escolha
+          e, entre 1800 e 1850, tentou-se o cultivo.
+        </p>
+        <a href="#">Ver Mapa</a>
+      </div>
 
-        </div>
+    </div>
   </section>
 
-  <section>
-    <div>
-      <div>
+  <section class="newsletter">
+    <div class="newsletter-container">
+      <div class="newsletter-info">
         <h2>Assine Nossa Newsletter</h2>
         <p>promoções e eventos mensais</p>
       </div>
@@ -136,8 +136,8 @@
     </div>
   </section>
 
-  <footer>
-    <div>
+  <footer class="footer">
+    <div class="footer-container">
       <p>
         Este é um projeto da Origamid. Mais em origamid.com<br>
         Praia de Botafogo, 300, 5 andar - Botafogo - Rio de Janeiro
