--- a/brafe-2/brafe-2-puro/index.html
+++ b/brafe-2/brafe-2-puro/index.html
@@ -12,15 +12,15 @@
 
 
   <header>
-    <div>
+    <div class="header-info">
       <p>aberto de 08 às 18h - seg à sáb - rua bartolomeu mitre - botafogo</p>
     </div>
 
-    <a href="index.html">
+    <a class="header-logo" href="index.html">
       <img src="img/brafe.png" alt="Brafé">
     </a>
 
-    <nav>
+    <nav class="header-menu">
       <ul>
         <li><a href="#">cafés</a></li>
         <li><a href="#">capuccinos</a></li>
