Add produtos css

--- a/brafe-2/brafe-2-puro/index.html
+++ b/brafe-2/brafe-2-puro/index.html
@@ -53,7 +53,7 @@
       </ul>
     </nav>
 
-    <section>
+    <section class="produtos">
       <h1>Capuccinos</h1>
       <ul>
         <li>
@@ -96,7 +96,7 @@
     </section>
   </div>
 
-  <footer>
+  <footer class="footer">
     <p>Este é um projeto da Origamid. Mais em origamid.com</p>
     <p>Praia de Botafogo, 300, 5 andar - Botafogo - Rio de Janeiro</p>
   </footer>
