--- a/brafe-3/brafe-3-puro/index.html
+++ b/brafe-3/brafe-3-puro/index.html
@@ -11,11 +11,11 @@
 
 <body>
 
-  <header>
-    <a href="#">
+  <header class="header">
+    <a href="#" class="header-logo">
       <img src="img/brafe.png" alt="Brafé">
     </a>
-    <nav>
+    <nav class="header-menu">
       <ul>
         <li><a href="#">Sobre</a></li>
         <li><a href="#">Produtos</a></li>
@@ -25,15 +25,15 @@
     </nav>
   </header>
 
-  <main>
-    <nav>
+  <main class="main-container">
+    <nav class="side-nav">
       <ul>
-        <li><a href="#">Contabilidade</a></li>
-        <li><a href="#">Produtos</a></li>
-        <li><a href="#">Páginas</a></li>
-        <li><a href="#">Plugins</a></li>
-        <li><a href="#">Formulários</a></li>
-        <li><a href="#">Hospedagens</a></li>
+        <li><a href="#" class="nav-contabilidade">Contabilidade</a></li>
+        <li><a href="#" class="nav-produtos">Produtos</a></li>
+        <li><a href="#" class="nav-paginas">Páginas</a></li>
+        <li><a href="#" class="nav-plugins">Plugins</a></li>
+        <li><a href="#" class="nav-formularios">Formulários</a></li>
+        <li><a href="#" class="nav-hospedagens">Hospedagens</a></li>
       </ul>
     </nav>
 
