Update brafe-3-puro css

--- a/brafe-3/brafe-3-puro/index.html
+++ b/brafe-3/brafe-3-puro/index.html
@@ -38,63 +38,57 @@
     </nav>
 
 
-  <section>
-    <header>
-      <h1>Produtos</h1>
-      <a href="#">Adicionar produtos</a>
-    </header>
+    <section class="produtos">
+      <header>
+        <h1>Produtos</h1>
+        <a href="#" class="adicionar-produtos">Adicionar produtos</a>
+      </header>
 
-    <ul>
-      <li>
-        <img src="img/cafe-1.jpg" alt="Café 1">
-        <ul>
-          <li><span>Nome</span> Capuccino</li>
-          <li><span>Preço</span> R$ 2,45</li>
-          <li><span>Dados</span> Café novo no estilo Capuccino</li>
-        </ul>
-        <a href="#">Editar</a>
-      </li>
-    </ul>
+      <ul>
+        <li class="produtos-item">
+          <img src="img/cafe-1.jpg" alt="Café 1">
+          <ul>
+            <li><span>Nome</span> Capuccino</li>
+            <li><span>Preço</span> R$ 2,45</li>
+            <li><span>Dados</span> Café novo no estilo Capuccino</li>
+          </ul>
+          <a href="#">Editar</a>
+        </li>
 
-    <ul>
-      <li>
-        <img src="img/cafe-2.jpg" alt="Café 2">
-        <ul>
-          <li><span>Nome</span> Capuccino</li>
-          <li><span>Preço</span> R$ 2,45</li>
-          <li><span>Dados</span> Café novo no estilo Capuccino</li>
-        </ul>
-        <a href="#">Editar</a>
-      </li>
-    </ul>
+        <li class="produtos-item">
+          <img src="img/cafe-2.jpg" alt="Café 2">
+          <ul>
+            <li><span>Nome</span> Capuccino</li>
+            <li><span>Preço</span> R$ 2,45</li>
+            <li><span>Dados</span> Café novo no estilo Capuccino</li>
+          </ul>
+          <a href="#">Editar</a>
+        </li>
 
-    <ul>
-      <li>
-        <img src="img/cafe-3.jpg" alt="Café 3">
-        <ul>
-          <li><span>Nome</span> Capuccino</li>
-          <li><span>Preço</span> R$ 2,45</li>
-          <li><span>Dados</span> Café novo no estilo Capuccino</li>
-        </ul>
-        <a href="#">Editar</a>
-      </li>
-    </ul>
+        <li class="produtos-item">
+          <img src="img/cafe-3.jpg" alt="Café 3">
+          <ul>
+            <li><span>Nome</span> Capuccino</li>
+            <li><span>Preço</span> R$ 2,45</li>
+            <li><span>Dados</span> Café novo no estilo Capuccino</li>
+          </ul>
+          <a href="#">Editar</a>
+        </li>
 
-    <ul>
-      <li>
-        <img src="img/cafe-4.jpg" alt="Café 4">
-        <ul>
-          <li><span>Nome</span> Capuccino</li>
-          <li><span>Preço</span> R$ 2,45</li>
-          <li><span>Dados</span> Café novo no estilo Capuccino</li>
-        </ul>
-        <a href="#">Editar</a>
-      </li>
-    </ul>
-  </section>
+        <li class="produtos-item">
+          <img src="img/cafe-4.jpg" alt="Café 4">
+          <ul>
+            <li><span>Nome</span> Capuccino</li>
+            <li><span>Preço</span> R$ 2,45</li>
+            <li><span>Dados</span> Café novo no estilo Capuccino</li>
+          </ul>
+          <a href="#">Editar</a>
+        </li>
+      </ul>
+    </section>
   </main>
 
-  <footer>
+  <footer class="footer"> 
     <p>Este é um projeto da Origamid. Mais em origamid.com</p>
     <p>Praia de Botafogo - RJ</p>
   </footer>
